// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entity EditIcon component tests should deactivate if wrong command level permissions are given 1`] = `
.c0 {
  cursor: pointer;
}

.c0 svg path {
  fill: #aaaaaa;
}

.c1 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c1 * {
  height: inherit;
  width: inherit;
}

@media print {
  .c0 {
    display: none;
  }
}

<span
  class="c0 c1"
  data-testid="svg-icon"
  title="Permission to edit Task denied"
>
  <svg>
    edit.svg
  </svg>
</span>
`;

exports[`Entity EditIcon component tests should deactivate if wrong resource level permissions are given 1`] = `
.c0 {
  cursor: pointer;
}

.c0 svg path {
  fill: #aaaaaa;
}

.c1 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c1 * {
  height: inherit;
  width: inherit;
}

@media print {
  .c0 {
    display: none;
  }
}

<span
  class="c0 c1"
  data-testid="svg-icon"
  title="Permission to edit Task denied"
>
  <svg>
    edit.svg
  </svg>
</span>
`;

exports[`Entity EditIcon component tests should render in active state with correct permissions 1`] = `
.c0 {
  cursor: pointer;
}

.c1 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c1 * {
  height: inherit;
  width: inherit;
}

@media print {
  .c0 {
    display: none;
  }
}

<span
  class="c0 c1"
  data-testid="svg-icon"
  title="Edit Task"
>
  <svg>
    edit.svg
  </svg>
</span>
`;
